--- a/framework/demo/ThingsGateway.Foundation.Demo.Rcl/Pages/OPCDA/OPCDAClientDebugPage.razor
+++ b/framework/demo/ThingsGateway.Foundation.Demo.Rcl/Pages/OPCDA/OPCDAClientDebugPage.razor
@@ -23,7 +23,7 @@
 @using ThingsGateway.Foundation.Core;
 @using ThingsGateway.Foundation.Adapter.OPCDA.Da;
 @using ThingsGateway.Foundation.Extension;
-@using ThingsGateway.Foundation.Serial;
+@using ThingsGateway.Foundation.SerialPorts;
 @using Masa.Blazor
 
 
