--- a/framework/demo/ThingsGateway.Foundation.Demo.Rcl/Pages/OPCUA/OPCUAClientDebugPage.razor
+++ b/framework/demo/ThingsGateway.Foundation.Demo.Rcl/Pages/OPCUA/OPCUAClientDebugPage.razor
@@ -25,7 +25,7 @@
 @using ThingsGateway.Foundation.Core;
 @using ThingsGateway.Foundation.Adapter.OPCUA;
 @using ThingsGateway.Foundation.Extension;
-@using ThingsGateway.Foundation.Serial;
+@using ThingsGateway.Foundation.SerialPorts;
 @using Masa.Blazor
 
 
