--- a/framework/demo/ThingsGateway.Foundation.Demo.Rcl/Pages/Siemens/SiemensDebugPage.razor
+++ b/framework/demo/ThingsGateway.Foundation.Demo.Rcl/Pages/Siemens/SiemensDebugPage.razor
@@ -20,7 +20,7 @@
 @using ThingsGateway.Foundation.Adapter.Siemens;
 @using ThingsGateway.Foundation.Core;
 @using ThingsGateway.Foundation.Extension;
-@using ThingsGateway.Foundation.Serial;
+@using ThingsGateway.Foundation.SerialPorts;
 
 @using Masa.Blazor
 
