--- a/framework/demo/ThingsGateway.Foundation.Demo.Rcl/_Imports.razor
+++ b/framework/demo/ThingsGateway.Foundation.Demo.Rcl/_Imports.razor
@@ -25,5 +25,5 @@
 @using System.Net.Http.Json
 @using System.IO;
 @using System.Text.Json;
-@using ThingsGateway.Foundation.Serial;
+@using ThingsGateway.Foundation.SerialPorts;
 @using ThingsGateway.Foundation.Sockets;
