--- a/framework/demo/ThingsGateway.Foundation.Demo.Rcl/Pages/Modbus/ModbusRtuDebugPage.razor
+++ b/framework/demo/ThingsGateway.Foundation.Demo.Rcl/Pages/Modbus/ModbusRtuDebugPage.razor
@@ -19,7 +19,7 @@
 @using Masa.Blazor;
 @namespace ThingsGateway.Foundation.Demo
 
-<SerialSessionPage @ref=_serialSessionPage></SerialSessionPage>
+<SerialPortClientPage @ref=_serialPortClientPage></SerialPortClientPage>
 
 <MCard Flat Class="pa-2 my-1" Style="width:100%">
      <div class="mb-4">驱动配置</div>
