--- a/src/ThingsGateway.Demo.Rcl/Pages/Modbus/ModbusMaster.razor
+++ b/src/ThingsGateway.Demo.Rcl/Pages/Modbus/ModbusMaster.razor
@@ -39,6 +39,8 @@
 
                  <MTextField Class="ma-1" Outlined Style="max-width:150px" Dense HideDetails="@("auto")"
                              Label=@(AppService.I18n.T(_plc.Description(x => x.Station))) @bind-Value=@_plc.Station></MTextField>
+                 <MTextField Class="ma-1" Outlined Style="max-width:150px" Dense HideDetails="@("auto")"
+                             Label=@(AppService.I18n.T(_plc.Description(x => x.HeartbeatHexString))) @bind-Value=@_plc.HeartbeatHexString></MTextField>
 
                  <MSelect Class="ma-1" Outlined Style="max-width:200px"
                           @bind-Value="_plc.DataFormat" Label="@(AppService.I18n.T(_plc.Description(x => x.DataFormat)))"
